--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
