--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@nextui-org/react": "^2.2.9",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
+    "mongoose": "^8.0.3",
     "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
