--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.2.9",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^5.0.0-beta.4",
@@ -25,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
