--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
-    "next-auth": "^5.0.0-beta.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.10.3",
