--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
@@ -16,9 +17,10 @@
     "@nextui-org/react": "^2.2.9",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
-    "next-auth": "^5.0.0-beta.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.10.3",
