--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.10.3",
     "zod": "^3.22.4"
   },
