--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/react": "^2.2.9",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
+    "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
