--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "obscenity": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
