--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
     "luxon": "^3.4.4",
-    "mongodb": "^6.3.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "obscenity": "^0.2.1",
+    "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
@@ -33,6 +34,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
+    "@types/otp-generator": "^4.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
