--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@nextui-org/react": "^2.2.9",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
     "luxon": "^3.4.4",
@@ -22,6 +23,7 @@
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.13",
     "obscenity": "^0.2.1",
     "otp-generator": "^4.0.1",
     "react": "^18",
