--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/react": "^2.2.9",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "firebase": "^11.6.1",
     "framer-motion": "^10.16.16",
     "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
