--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "firebase": "^11.6.1",
     "framer-motion": "^10.16.16",
+    "lucide-react": "^0.510.0",
     "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.0.3",
