--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.0.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "mongoose-paginate-v2": "^1.9.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.13",
@@ -35,6 +37,7 @@
     "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive-pagination": "^2.11.0",
     "react-spinners": "^0.13.8",
     "recharts": "^2.10.3",
     "zod": "^3.22.4"
