--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.510.0",
